<resources>
    <string name="app_name">QuizApp</string>
    <string name="welcome">Welcome</string>
    <string name="start">start</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="flags">Flags</string>
    <string name="submit">Submit</string>
    <string name="play_again">Play Again</string>
    <string name="image_of_trophy">image of trophy</string>
</resources>