<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ic_bg">
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/quiz_app"
    android:textSize="25sp"
    android:textStyle="bold"
    android:layout_marginBottom="30dp"
    android:textColor="@color/white"
    />
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:elevation="8dp">

        <LinearLayout
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="10dp">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="40sp"
            android:textStyle="bold"
            />
            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/please_enter_your_name"
                android:textSize="17sp"
                />
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
               android:layout_marginTop="20dp"
               >

               <androidx.appcompat.widget.AppCompatEditText
                   android:id="@+id/name_Enter"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/name"
                   android:inputType="text"
                   android:textColor="#363A43"
                   android:textColorHint="#7A8089"/>
           </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/start_button"
                android:layout_marginTop="9dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textSize="18sp"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>



</LinearLayout>